# irmaseal

.github/workflows/: build.yml
irmaseal-cli/: Cargo.toml
irmaseal-cli/src/: decrypt.rs  encrypt.rs  main.rs  util.rs
irmaseal-core/: Cargo.toml
irmaseal-core/src/: identity.rs  lib.rs  util.rs
irmaseal-core/src/stream/: mod.rs  opener.rs  sealer.rs  tests.rs
irmaseal-js/: Cargo.toml
irmaseal-js/src/: client.rs  lib.rs  util.rs
