[package]
name = "irmaseal-js"
version = "0.1.0"
authors = ["w.geraedts@sarif.nl"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfb-mode = { version = "0.3.2" }
hmac = { version = "0.7.1" }
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
futures = "0.1.28"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
irmaseal-core = { path = "../irmaseal-core" }
qrcode = { version = "0.11.0", default-features = false }
arrayvec = { version = "0.5", features = ["array-sizes-129-255", "serde"] }
js-sys = "0.3.27"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.3.27"
gloo-timers = { version = "0.1.0", features = ["futures"] }

ibe = { git = "https://github.com/wassasin/ibe" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.27"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
